k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prawoasystent-prod
  labels:
    name: prawoasystent-prod
    env: production
